# gateway

./: CMakeLists.txt  LICENSE  build-server.sh  build-target.sh  install-server.sh  install-target.sh  run-server.sh  run-target.sh
include/: Log.cpp  Log.h  Socket.cpp  Socket.h  TcpSocket.cpp  TcpSocket.h  UdpSocket.cpp  UdpSocket.h  aes.h  toolbox.cpp  toolbox.h
src/: read_single_conf.h
src/server/: CMakeLists.txt  main.cpp
